--- a/templates/base.html
+++ b/templates/base.html
@@ -75,7 +75,7 @@
 				<div id="content">
 		            <div class="container_4">
 		                {% block content %}{% endblock %}
-						{% block minorcol %}{% endblock %}
+						<div class="clear"></div>
 		            </div>
 				</div>
 			</div>
