--- a/templates/rah/home_logged_out.html
+++ b/templates/rah/home_logged_out.html
@@ -4,7 +4,7 @@
 {% endblock %}
 {% block content %}
 <div class="grid_3 alpha">
-	<a href="{% url action_detail 'cut-standby-power' %}">
+	<a href="{% url action_detail 'eliminate-standby-vampire-power' %}">
 		<img src="/static/images/rich_actions/vampire/large.png" width="740" height="402"/>
 	</a>
 	<div class="clear"></div> 
@@ -29,5 +29,4 @@
 	<div id="minor_col_find"></div>
 	<div id="minor_col_ord"></div>
 </div>
-<div class="clear"></div>
 {% endblock %}
