fixed html problems with the input tags within the search widget

--- a/search_widget/templates/search_widget/_search_widget.html
+++ b/search_widget/templates/search_widget/_search_widget.html
@@ -2,9 +2,9 @@
     <h3>{{ search_title }}</h3>
     <div class="search_fields">
         <span class="form_row">
-            <input class="search_value" name="search" type="text"></input>
+            <input class="search_value" name="search" type="text" />
         </span>
-        <input class="search_button" type="submit" value="Search"></input>
+        <input class="search_button" type="submit" value="Search" />
     </div>
     <ol class="search_results hidden">
         {{ search_results|safe }}
