--- a/templates/rah/home_logged_out.html
+++ b/templates/rah/home_logged_out.html
@@ -23,10 +23,10 @@
 	<p>Gain full access to Repower at Home's features. It's free!</p>
 	<p><a href="{% url register %}" title="">Create your account</a></p>
 	<div id="minor_col_sign"></div>
-	<div id="minor_col_ord"></div>
+	<div class="minor_col_ord"></div>
 	<div id="minor_col_host"></div>
-	<div id="minor_col_ord"></div>
+	<div class="minor_col_ord"></div>
 	<div id="minor_col_find"></div>
-	<div id="minor_col_ord"></div>
+	<div class="minor_col_ord"></div>
 </div>
 {% endblock %}
