--- a/templates/blog/post_list.html
+++ b/templates/blog/post_list.html
@@ -22,12 +22,11 @@
         {% for post in object_list %}
             <div>
                 {% include 'blog/_post_header.html' %}
-                <p class="tease">{{ post.tease|safe }}</p>
+                <p class="tease">{{ post.tease|safe }} (<a href="{{ post.get_absolute_url }}" title="View this post">read more</a>)</p>
                 {% get_comment_count for post as comment_count %}
-                <h4>
+                <p>
                     {{ comment_count }} comment{{ comment_count|pluralize }}
-                    <span>(<a href="{{ post.get_absolute_url }}" title="View this post">read more</a>)</span>
-                </h4>
+                </p>
             </div>
         {% endfor %}
     </div>
