--- a/templates/rah/_feedback.html
+++ b/templates/rah/_feedback.html
@@ -1,6 +1,6 @@
 <p>
     Your feedback is extremely valuable to us. Use this form to let us 
-    know you think about this page or the site in general. Thanks!
+    know what you think about this page or the site in general. Thanks!
 </p>
 <form action="{% url rah.views.feedback %}" method="post" id="feedback_form">
     <div>{{feedback_form.as_p}}</div>
