finished updating the email text for invites [completed: 224]

--- a/groups/templates/groups/group_join_request.html
+++ b/groups/templates/groups/group_join_request.html
@@ -11,8 +11,8 @@
     Thanks for steering your group towards a more efficient future!
 </p>
 <p>
-    Remember, {{ group }} is a private group. Anyone who wants to join the <br />
-    group has to get your nod first. To make it public, 
+    Remember, {{ group }} is a closed group. Anyone who wants to join the <br />
+    group has to get your nod first. To make it open, 
     <a href="http://{{ domain }}{% url group_edit group.slug %}">modify your group setting.</a>
 </p>
 <p>
