--- a/groups/templates/groups/group_membership_response.html
+++ b/groups/templates/groups/group_membership_response.html
@@ -30,8 +30,8 @@
         <a href="http://{{ domain }}{% url group_create %}">Click here to create your own</a>
     </p>
     <p>
-        Remember, only private groups need administrator approval. All of the public <br />
-        groups are wide open. 
+        Remember, only closed groups need administrator approval. You can join any  <br />
+        of the open groups at any time.
     </p>
     <p>
         Cheers,<br />
