--- a/invite/templates/emails/group.html
+++ b/invite/templates/emails/group.html
@@ -1,11 +1,25 @@
-Hello, 
-
-{{ from_user|safe }} invited you to a group on repowerathome.com. 
-
-To accept this invitation, click here:
-{{ invite.get_permalink }}
-
-{% if note %}Note: {{ note|safe }}{% endif %}
-
-Regards,
-The Repower@Home team
+<p>
+    Hi,<br />
+    {{ from_user.get_full_name}} wants you to join a group on Repower at Home.
+</p>
+<p>
+    <a href="{{ invite.get_permalink }}">Click here to accept the invitation</a>
+</p>
+{% if note %}
+    <p>
+       Here's what {{ from_user.first_name }} wants you to know: <br />
+       {{ note|safe }} 
+    </p>
+{% endif %}
+<p>
+    Repower at Home groups help members save energy, see what their friends are doing, <br />
+    organize their communities, and save the world through the magic of energy efficiency. <br />
+    Link up today – it’s free!
+</p>
+<p>
+    <a href="https://{{ domain }}{% url register %}">Join now</a>
+</p>
+<p>
+    Ciao,<br />
+    The Repower at Home team
+</p>
