--- a/templates/rah/search.html
+++ b/templates/rah/search.html
@@ -4,7 +4,7 @@
 <div id="cse_search_results"></div>
 <script type="text/javascript">
     var googleSearchIframeName = "cse_search_results";
-    var googleSearchFormName = "cse_search_box";
+    var googleSearchFormName = "cse_search_box_form";
     var googleSearchFrameWidth = 500;
     var googleSearchDomain = "www.google.com";
     var googleSearchPath = "/cse";
