--- a/templates/base.html
+++ b/templates/base.html
@@ -35,13 +35,13 @@
 	                {#         | <a href="{% url admin_root '' %}">Admin</a> #}
 	                {#     {% endif %} #}
 	                {# </div> #}
-	                <form action="/search" id="cse_search_box">
+	                <form action="/search" id="cse_search_box_form">
 	                    <div>
 	                        <input type="hidden" name="cx" value="004464471324017850671:spsjawaq-zy" />
 	                        <input type="hidden" name="cof" value="FORID:10" />
 	                        <input type="hidden" name="ie" value="UTF-8" />
-	                        <input type="text" name="q" size="31" />
-	                        <input type="submit" name="sa" value="Search" />
+	                        <input type="text" name="q" size="31" id="cse_search_box"/>
+	                        <input type="submit" name="sa" value="Go" id="cse_search_box_submit"/>
 	                    </div>
 	                </form>
 	                {% if user.is_authenticated %}
