--- a/templates/rah/home_logged_out.html
+++ b/templates/rah/home_logged_out.html
@@ -10,12 +10,21 @@
 	<div class="clear"></div> 
 	<div class="grid_1 alpha">
 		<img src="/static/images/index/home_make_a_plan.png" width="240" height="147"/>
+		<p>
+			Use the actions page to find smart solutions to home energy waste
+		</p>
 	</div>
 	<div class="grid_1">
 		<img src="/static/images/index/home_save_energy.png" width="240" height="147"/>		
+		<p>
+			Complete actions to lower your monthly bills and create a cleaner world
+		</p>	
 	</div>
 	<div class="grid_1 omega">
 		<img src="/static/images/index/home_take_the_lead.png" width="240" height="149"/>
+		<p>
+			Organize your friends, family, and neighbors on the community page
+		</p>
 	</div>
 </div>
 <div class="grid_1 omega">
