--- a/static/css/style.css
+++ b/static/css/style.css
@@ -427,7 +427,7 @@ a.button:hover {
 /* Chart */
 #chart{
     width:600px;
-    height:300px;
+    height:400px;
 }
 .chart_tooltip {
     width:250px;
@@ -435,6 +435,7 @@ a.button:hover {
     border: 2px solid #000;
     padding: 5px;
     background-color: #fee;
+    z-index:1002;
 }
 
 /* @group profile */
