--- a/templates/rah/profile.html
+++ b/templates/rah/profile.html
@@ -25,7 +25,9 @@
 		<div id="tongue_activity">
 			Activity
 			<div>
-				<a href="#" title="View progress chart"><img src="/static/images/theme/tongue_graph.gif" alt="graph"/></a>
+				<a href="#chart" id="chart_dialog_link" title="View progress chart">
+					<img src="/static/images/theme/tongue_graph.gif" alt="graph"/>
+				</a>
 			</div>
 		</div>
         {# {% if profile.building_type %} #}
@@ -75,12 +77,6 @@
     {% endif %}
 </div>
 <div class="grid_2 omega">
-    <div id="chart"></div>
-    <script type="text/javascript" charset="utf-8">
-        /* <![CDATA[ */
-        var chart_data = {{chart_data|safe}};
-        /* ]]> */
-    </script>
     {% if in_progress %}
         <div class="actions_block" id="actions_in_progress">
             <h2>In Progress Actions</h2>
@@ -97,6 +93,14 @@
             {% endfor %}
         </div>
     {% endif %}
+</div>
+<div id="chart_dialog">
+    <script type="text/javascript" charset="utf-8">
+        /* <![CDATA[ */
+        var chart_data = {{chart_data|safe}};
+        /* ]]> */
+    </script>
+	<div id="chart"></div>
 </div>
 {% endblock %}
 {% block extrajs %}
