styled the comment forms [completed: 221]

--- a/actions/templates/actions/action_detail.html
+++ b/actions/templates/actions/action_detail.html
@@ -18,6 +18,7 @@
         {% render_template_snippet action.content %}
     </div>
     <div id="comments">
+        <div id="comments_divider"></div>
         {% with action as object %}
             {% render_comment_list for object %}
             {% render_comment_form for object %}
