--- a/templates/blog/post_detail.html
+++ b/templates/blog/post_detail.html
@@ -33,6 +33,7 @@
     </div>
 
     <div id="comments">
+        <div id="comments_divider"></div>
         {% render_comment_list for object %}
         {% render_comment_form for object %}
     </div>
