--- a/static/css/style.css
+++ b/static/css/style.css
@@ -471,9 +471,70 @@ a.button:hover {
 #invite_friend_dialog textarea, #twitter_post_dialog textarea, #feedback_dialog textarea{ width:100%; height: 100px; }
 
 /* @group comments */
-.comment .author { margin-top: 10px; }
+#comments_divider {
+    height: 12px;
+    width: 100%;
+    margin-bottom: 25px;
+    background-color: #5BBCCA;
+}
+#comments_heading {
+    font-size: 36px;
+    color: #5BBCCA;
+    margin-bottom: 50px;
+}
+.comment_wrapper {
+    margin-bottom: 72px;
+}
 
-.comment_helpful_question { float: left; }
+.comment_wrapper .comment, #id_comment {
+    float: left;
+    width: 488px;
+    height: 100px;
+    padding: 25px 50px;
+    background-color: #FFF;
+    color: #74A01F;
+    font-size: 24px;
+    border: 2px #74A01F solid;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    overflow-y: auto;
+    position: relative;
+}
+
+.comment_wrapper .author {
+    margin-left: 30px;
+    float: left;
+}
+
+.comment_wrapper .gravatar {
+    margin-bottom: 12px;
+}
+
+.comment_wrapper .user_name * {
+    font-family: helvetica;
+    font-weight: bold;
+    font-size: 18px;
+    color: #5BBCCA;
+}
+
+#comments_form_heading {
+    font-family: helvetica;
+    font-size: 32px;
+    font-weight: bold;
+    margin-bottom: 32px;
+    color: #5BBCCA;
+}
+
+#id_comment {
+    float: none;
+    font-family: arial;
+    margin-bottom: 22px;
+}
+
+#add_comment_submit {
+    width: 588px;
+}
+
 /* @end */
 
 /* @group blog */
@@ -600,7 +661,11 @@ a.tag:hover {
 /* @groups flagged */
 .flagged_flag_form, .flagged_flag_form * { display: inline; }
 .flagged_flag_form { margin-left: 10px; }
-.flag_submit_link { font-size: smaller; }
+.flag_submit_link {
+    color: #5BBCCA;
+    font-size: 10.75px;
+    text-decoration: underline;
+}
 /* @end */
 
 /* @groups vampire_power */
