--- a/templates/comments/list.html
+++ b/templates/comments/list.html
@@ -4,29 +4,33 @@
 
 {% get_comment_list for object as comments %}
 {% if comments %}
-    <h2>Comments</h2>
+    <h2 id="comments_heading">What people are saying?</h2>
     {% for comment in comments %}
-        <div class="comment">
-            {{ comment.comment }}
-            {% if user.is_authenticated %}
-                {% get_flag_form for comment %}
-            {% endif %}
-            <p class="author">
-                -- Posted by {% safe_user_link comment.user %} on {{ comment.submit_date|date:"F j, Y" }}
-            </p>
-            <div>
-                {% get_rating_count for comment as users_voted %}
-                {% get_rating_sum for comment as users_helped %}
-                {% if users_voted %}
-                    {{ users_helped }} out of {{ users_voted }} user{{ users_voted|pluralize }} found this helpful.<br />
-                {% endif %}
+        <div class="comment_wrapper">
+            <div class="comment">
+                {{ comment.comment }}
                 {% if user.is_authenticated %}
-                    <div class="rateable_rate_form_container">
-                        <span class="comment_helpful_question">Did you find this comment helpful?</span>
-                        {% get_rating_form for comment %}
-                    </div>
+                    {% get_flag_form for comment %}
                 {% endif %}
             </div>
+            <div class="author">
+                <img class="gravatar" src="{{ comment.user.get_profile.get_gravatar_url }}" alt="user gravatar" />
+                <div class="user_name">{% safe_user_link comment.user %}</div>
+            </div>
+            <br class="spacer" />
+            {# <div> #}
+            {#     {% get_rating_count for comment as users_voted %} #}
+            {#     {% get_rating_sum for comment as users_helped %} #}
+            {#     {% if users_voted %} #}
+            {#         {{ users_helped }} out of {{ users_voted }} user{{ users_voted|pluralize }} found this helpful.<br /> #}
+            {#     {% endif %} #}
+            {#     {% if user.is_authenticated %} #}
+            {#         <div class="rateable_rate_form_container"> #}
+            {#             <span class="comment_helpful_question">Did you find this comment helpful?</span> #}
+            {#             {% get_rating_form for comment %} #}
+            {#         </div> #}
+            {#     {% endif %} #}
+            {# </div> #}
         </div>
     {% endfor %}
 {% endif %}
