--- a/actions/templates/actions/action_show.html
+++ b/actions/templates/actions/action_show.html
@@ -1,6 +1,16 @@
 {% extends "rah/base.html" %}
 {% block content %}
 <div class="grid_1 alpha">
+	<div id="tongue_signup">
+		<form action="{% url register %}" method="post" id="registration_form" autocomplete="off">
+			<h1>Sign Up!</h1>
+			{% with register_form as form %}
+		    	{% include "rah/_overset_form.html" %}
+			{% endwith %}
+			<p><input type="submit" value="Sign me up" id="register_submit"/></p>
+		    {% csrf_token %}
+		</form>
+    </div>
 	<ul id="minor_nav">
 		{% for tag in tags %}
             <li {% if forloop.last %} class="minor_nav_last"{% endif %}>
@@ -25,11 +35,10 @@
 	<img src="/static/images/theme/benefits.jpg"/>
 	<div class="clear"></div>
 	<div class="grid_2 alpha">
-		<h2>Featured Actions</h2>
+		<h2 class="h_aqua">Featured Actions</h2>
 	    <div id="action_show">
 	        {% for action in actions %}
 	            {% include 'actions/_action_nugget.html' %}
-	            <br class='spacer' />
 	        {% endfor %}
 	    </div>
 	</div>
