--- a/templates/base.html
+++ b/templates/base.html
@@ -40,7 +40,10 @@
 	                        <input type="hidden" name="cx" value="004464471324017850671:spsjawaq-zy" />
 	                        <input type="hidden" name="cof" value="FORID:10" />
 	                        <input type="hidden" name="ie" value="UTF-8" />
-	                        <input type="text" name="q" size="31" id="cse_search_box"/>
+	                        <span class="overset">
+                                <label class="hidden" for="cse_search_box">Search</label>
+	                            <input type="text" name="q" size="31" id="cse_search_box"/>
+	                        </span>
 	                        <input type="submit" name="sa" value="Go" id="cse_search_box_submit"/>
 	                    </div>
 	                </form>
