moved next parameter out of the login url and into the form

--- a/templates/registration/register.html
+++ b/templates/registration/register.html
@@ -1,14 +1,16 @@
 {% extends "rah/base.html" %}
 {% block content %}
 <div class="grid_2 alpha">
-	<form action="{% url login %}{% if next %}?next={{ next|escape }}{% endif %}" method="post" id="login_form" autocomplete="off">
+	<form action="{% url login %}" method="post" id="login_form" autocomplete="off">
 		<h1>Sign In</h1>
 		{% with login_form as form %}
 	    	{% include "rah/_overset_form.html" %}
 		{% endwith %}
-	    <p><input type="submit" value="Login" /></p>
+	    <p>
+	        <input type="submit" value="Login" /> | <a href="{% url password_reset %}">Recover password</a>
+	    </p>
 	    {% csrf_token %}
-		<a href="{% url password_reset %}">Recover password</a>	
+		<p><input type="hidden" name="next" value="{{ next|escape }}" /></p>
 	</form>
 </div>
 <div class="grid_2 omega">
