--- a/templates/comments/form.html
+++ b/templates/comments/form.html
@@ -13,8 +13,7 @@
             {% else %}
                 {% if field.name == "comment" or field.name == "honeypot" %}
                     {% if field.errors %}{{ field.errors }}{% endif %}
-                    <p
-                        {% if field.errors %} class="error"{% endif %}
+                    <p class="{% if field.name == 'comment' %}comment {% endif %}{% if field.errors %}error {% endif %}" 
                         {% ifequal field.name "honeypot" %} style="display:none;" {% endifequal %}>
                         {{ field }}
                     </p>
