--- a/static/css/style.css
+++ b/static/css/style.css
@@ -895,7 +895,7 @@ http://perishablepress.com/press/2008/02/05/lessons-learned-concerning-the-clear
 .ui-state-hover, .ui-widget-content .ui-state-hover, .ui-state-focus, .ui-widget-content .ui-state-focus { border: 2px solid #62DDFF; background: #79c9ec url(../images/theme/button_bg_hover.png) 50% 50% repeat-x; font-weight: normal; color: #ffffff; }
 .ui-state-hover a, .ui-state-hover a:hover { color: #ffffff; text-decoration: none; }
 
-.ui-state-active, .ui-witdget-content .ui-state-active { border: 2px solid #62DDFF; background: #6eac2c url(../images/theme/button_bg_default.png) 50% 50% repeat-x; font-weight: normal; color: #ffffff; }
+.ui-state-active, .ui-widget-content .ui-state-active { border: 2px solid #62DDFF; background: #93c139; font-weight: normal; color: #ffffff; }
 .ui-state-active a, .ui-state-active a:link, .ui-state-active a:visited { color: #ffffff; text-decoration: none; }
 
 .ui-widget :active { outline: none; }
