--- a/templates/rah/home_logged_out.html
+++ b/templates/rah/home_logged_out.html
@@ -30,12 +30,27 @@
 <div class="grid_1 omega">
 	<h2>Get started</h2>
 	<p>Gain full access to Repower at Home's features. It's free!</p>
-	<p><a href="{% url register %}" title="">Create your account</a></p>
-	<div id="minor_col_sign"></div>
-	<div class="minor_col_ord"></div>
-	<div id="minor_col_host"></div>
-	<div class="minor_col_ord"></div>
-	<div id="minor_col_find"></div>
-	<div class="minor_col_ord"></div>
+    {# <p><a href="{% url register %}" title="">Create your account</a></p> #}
+	<div class="homepage_form_box">
+    	<div id="minor_col_sign" class="minor_col_img"></div>
+    	<form action="{% url register %}" method="get">
+    	    <div class="overset">
+    	        <label class="homepage_label" for="id_email">Enter your email</label>
+    	        <input id="id_email" name="email" class="homepage_input" type="text"></input>
+    	    </div>
+    	    <div>
+    	        <input type="submit" value="Get Started"></input>
+    	    </div>
+    	</form>
+    	<div class="minor_col_ord minor_col_img"></div>
+	</div>
+	<div class="homepage_form_box">
+	    <div id="minor_col_host" class="minor_col_img"></div>
+	    <div class="minor_col_ord minor_col_img"></div>
+	</div>
+	<div class="homepage_form_box">
+	   <div id="minor_col_find" class="minor_col_img"></div>
+	   <div class="minor_col_ord minor_col_img"></div>
+	</div>
 </div>
 {% endblock %}
